--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_cards">Cards</string>
     <string name="title_notifications">Notifications</string>
     <string name="combat_power">Combat Power</string>
-    <string name = "nfcAdd">Scan a Card</string>
-    <string name= "scanCard">Swipe your card now</string>
+    <string name = "scanCard">Scan a Card</string>
+    <string name= "nfcAddCard">Swipe your card now</string>
+    <string name="done">Done</string>
 </resources>
