--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,14 @@
     <string name="title_notifications">Notifications</string>
     <string name="combat_power">Combat Power</string>
     <string name = "scanCard">Scan a Card</string>
-    <string name= "nfcAddCard">Swipe your card now</string>
+    <string name= "nfcAddCard">Swipe the card now</string>
+    <string name="addCard">Add a card</string>
+    <string name="numAdd">Enter a number</string>
+    <string name="numHint">4 digit number</string>
+    <string name="picAdd">Point the camera at the card</string>
     <string name="done">Done</string>
+    <string name="cancel">Cancel</string>
+    <string name="mode1"> Mode 1</string>
+    <string name="mode2"> Mode 2</string>
+    <string name="mode3"> Mode 3</string>
 </resources>
