--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_cards">Cards</string>
     <string name="title_notifications">Notifications</string>
     <string name="combat_power">Combat Power</string>
+    <string name="title_activity_notification">NotificationActivity</string>
+    <string name="title_dashboard">Dashboard</string>
 </resources>
